# vega

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  FLOW_DIAGRAMS.md  LICENSE-APACHE  PROJECT_STRUCTURE.md  README.md  ROADMAP.md  SECURITY.md  UNDER_THE_HOOD.md
.github/workflows/: ci.yml
crates/vega/: Cargo.toml
crates/vega-cli/: Cargo.toml
crates/vega-cli/src/: main.rs
crates/vega-cli/tests/: cli.rs
crates/vega-client/: Cargo.toml
crates/vega-client/src/: lib.rs
crates/vega-config/: Cargo.toml
crates/vega-config/src/: lib.rs
crates/vega-core/: Cargo.toml
crates/vega-core/src/: lib.rs
crates/vega-fetch/: Cargo.toml
crates/vega-fetch/src/: lib.rs
crates/vega-macros/: Cargo.toml
crates/vega-macros/src/: lib.rs
crates/vega-router/: Cargo.toml
crates/vega-router/src/: lib.rs
crates/vega-server/: Cargo.toml
crates/vega-server/src/: lib.rs
crates/vega/src/: lib.rs
examples/blog-auth-demo/: Cargo.toml  Vega.toml  app.rs  build.rs  middleware.rs
examples/blog-auth-demo/api/: hello.rs
examples/blog-auth-demo/api/_vega/: routes.rs
examples/blog-auth-demo/api/admin/posts/: [id].rs  index.rs
examples/blog-auth-demo/api/auth/: login.rs  logout.rs  me.rs  register.rs
examples/blog-auth-demo/api/blog/: [slug].rs  index.rs
examples/blog-auth-demo/api/users/: [id].rs  index.rs
examples/blog-auth-demo/components/: button.rs  card.rs  footer.rs  navbar.rs
examples/blog-auth-demo/pages/: _layout.rs  _not_found.rs  about.rs  admin.rs  dashboard.rs  index.rs
examples/blog-auth-demo/pages/(auth)/: login.rs  logout.rs  register.rs
examples/blog-auth-demo/pages/blog/: [slug].rs  _layout.rs  index.rs
examples/blog-auth-demo/pages/docs/: [...path].rs  index.rs
examples/blog-auth-demo/sections/: cta.rs  hero.rs
examples/blog-auth-demo/styles/: global.css
examples/demo/: Cargo.toml  Vega.toml  build.rs
examples/demo/pages/: index.rs
examples/demo/src/: main.rs
examples/demo/styles/: global.css
