[package]
name = "vega-cli"
description = "CLI binary for the Vega web framework (vega new, dev, build, generate, routes)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[[bin]]
name = "vega"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
walkdir.workspace = true
serde_json.workspace = true
vega-config = { path = "../vega-config" }
vega-router = { path = "../vega-router" }

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
tempfile.workspace = true
