[package]
name = "vega-client"
description = "Client-side WASM runtime and hydration utilities for the Vega web framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
