[package]
name = "vega-config"
description = "Vega.toml configuration parser for the Vega web framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
serde.workspace = true
toml.workspace = true
thiserror.workspace = true
