[package]
name = "vega-core"
description = "Core types, enums, and traits for the Vega web framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[features]
default = []
ssr = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
