[package]
name = "vega-macros"
description = "Procedural macros for the Vega web framework (#[page], #[layout], #[get], etc.)"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
