[package]
name = "vega-server"
description = "Axum-based server runtime with SSR, API routing, middleware, and auth for the Vega web framework"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
url.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
async-trait.workspace = true
once_cell.workspace = true
uuid.workspace = true
vega-core = { path = "../vega-core" }
vega-config = { path = "../vega-config" }
