[package]
name = "blog-auth-demo"
version.workspace = true
edition.workspace = true
publish.workspace = true
build = "build.rs"

[features]
default = ["ssr"]
ssr = ["vega/ssr"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_urlencoded.workspace = true
url.workspace = true
axum.workspace = true
vega = { path = "../../crates/vega", features = ["ssr"] }

[build-dependencies]
anyhow.workspace = true
vega-router = { path = "../../crates/vega-router" }
