[package]
name = "demo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[features]
default = ["ssr"]
ssr = ["vega/ssr"]

[dependencies]
vega = { version = "0.9", path = "../../crates/vega", features = ["ssr"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[build-dependencies]
anyhow = "1"
vega-router = { version = "0.9", path = "../../crates/vega-router" }
